# codeclaw

./: .env.example  .gitignore  README.md  build_entry.py  codeclaw.spec  pyproject.toml
.github/workflows/: ci.yml
landing_page/: index.html  script.js  styles.css
scripts/: commit_push.py
src/codeclaw/: __init__.py  agent.py  approval_preview.py  cli.py  config.py  console_ui.py  hooks.py  llm_factory.py  llm_types.py  memory.py  model_util.py  ollama.py  openai_compat.py  policy.py  project_init.py  providers.py  run_log.py  session_store.py  shell_util.py
src/codeclaw/prompts/: system.md
src/codeclaw/tools/: __init__.py  base.py  common.py  filesystem.py  git.py  search.py  shell.py
tests/: conftest.py  shell_helpers.py  test_agent.py  test_cli.py  test_config_and_memory.py  test_console_ui.py  test_hooks.py  test_ollama_client.py  test_providers.py  test_shell_util.py  test_tools.py
